Edit & Remove command. Improved naming convention.

--- a/Client/src/app/components/app-components/ingredients/ingredient/ingredient.component.html
+++ b/Client/src/app/components/app-components/ingredients/ingredient/ingredient.component.html
@@ -5,6 +5,6 @@
 
     <div class="w-20p">
         <button (click)="openEditDialog()" class="btn-silver"><i class="fas fa-terminal"></i></button>
-        <button class="btn-silver"><i class="fas fa-dumpster"></i></button>
+        <button (click)="openRemoveDialog()" class="btn-silver"><i class="fas fa-dumpster"></i></button>
     </div>
 </div>
