--- a/Client/src/app/components/app-components/events/event-card/event-card.component.html
+++ b/Client/src/app/components/app-components/events/event-card/event-card.component.html
@@ -1,5 +1,5 @@
 <div class="event-card w3-center" (click)="chooseAction()">
     <i *ngIf="isEventTypeOf(_eCommandType.Create)" class="fas fa-plus"></i>
     <i *ngIf="isEventTypeOf(_eCommandType.Edit)" class="fas fa-screwdriver"></i>
-    <i *ngIf="isEventTypeOf(_eCommandType.Delete)" class="fas fa-dumpster"></i>
+    <i *ngIf="isEventTypeOf(_eCommandType.Remove)" class="fas fa-dumpster"></i>
 </div>
