Confirm Dialog subscription bugfix - confirmation service removed

--- a/Client/src/app/components/app-components/events/event-card/event-card.component.html
+++ b/Client/src/app/components/app-components/events/event-card/event-card.component.html
@@ -3,3 +3,5 @@
     <i *ngIf="isEventTypeOf(_eCommandType.Edit)" class="fas fa-screwdriver"></i>
     <i *ngIf="isEventTypeOf(_eCommandType.Remove)" class="fas fa-dumpster"></i>
 </div>
+
+<app-confirm-modal #confirmModal></app-confirm-modal>
