--- a/Client/src/app/components/app-components/ingredients/ingredients.component.html
+++ b/Client/src/app/components/app-components/ingredients/ingredients.component.html
@@ -46,5 +46,7 @@
 
 <app-create-ingredient-dialog #acid (onConfirmed)="onIngredientCreate($event)"></app-create-ingredient-dialog>
 <app-edit-ingredient-dialog #aeid (onConfirmed)="onIngredientEdit($event)"></app-edit-ingredient-dialog>
+<app-confirm-modal #confirmModal></app-confirm-modal>
 <button (click)="clogData()">test returned data</button>
 <button (click)="reseed()">ReseedDb</button>
+<button (click)="testApiService()">Test Api Service</button>
