minor css fixes

--- a/Client/src/app/components/app-components/ingredients/create-ingredient-dialog/create-ingredient.dialog.html
+++ b/Client/src/app/components/app-components/ingredients/create-ingredient-dialog/create-ingredient.dialog.html
@@ -21,8 +21,8 @@
             <div class="w3-center w3-red">{{ errorMessage }}</div>
             <div class="w3-row">
                 <div class="btn-flex">
-                    <button (click)="onConfirm()">Ok</button>
-                    <button (click)="onClose()">Cancel</button>
+                    <button (click)="onConfirm()" class="btn-silver">Ok</button>
+                    <button (click)="onClose()" class="btn-silver">Cancel</button>
                 </div>
             </div>
         </div>
