--- a/Client/src/app/components/app-components/ingredients/edit-ingredient-dialog/edit-ingredient.dialog.html
+++ b/Client/src/app/components/app-components/ingredients/edit-ingredient-dialog/edit-ingredient.dialog.html
@@ -7,7 +7,7 @@
                     Enter ingredient's name
                 </div>
                 <div class="w3-third">
-                    <input type="text" [(ngModel)]="ingredient.name">
+                    <input class="w-100p" type="text" [(ngModel)]="ingredient.name">
                 </div>
             </div>
             <div class="w3-row">
@@ -15,7 +15,7 @@
                     Enter ingredient's strength
                 </div>
                 <div class="w3-third">
-                    <input type="number" [(ngModel)]="ingredient.strength" [max]="60" [min]="0">
+                    <input class="w-100p" type="number" [(ngModel)]="ingredient.strength" [max]="60" [min]="0">
                 </div>
             </div>
             <br/>
