--- a/Client/src/app/components/app-components/ingredients/edit-ingredient-dialog/edit-ingredient.dialog.scss
+++ b/Client/src/app/components/app-components/ingredients/edit-ingredient-dialog/edit-ingredient.dialog.scss
@@ -3,8 +3,8 @@
 .dialog-content {
     width: 50%;
     padding: 2rem;
-    border: 1px solid $text-darkred;
-    background: $background-dark;
+    border: 2px double $text-orange;
+    background: $background-medium;
     margin: auto;
     color: $text-default;
 }
