--- a/Client/src/app/components/app-components/ingredients/create-ingredient-dialog/create-ingredient.dialog.html
+++ b/Client/src/app/components/app-components/ingredients/create-ingredient-dialog/create-ingredient.dialog.html
@@ -1,12 +1,12 @@
 <div class="w3-modal w3-center" [ngClass]="(visible) ? 'dialog-displayed' : 'dialog-hidden'">
         <div class="w3-container dialog-content">
             <br/>
-            <div class="w3-row">
+            <div class="w3-row w3-margin-bottom">
                 <div class="w3-twothird w3-left">
                     Enter ingredient's name
                 </div>
                 <div class="w3-third">
-                    <input type="text" [(ngModel)]="ingredient.name">
+                    <input class="w-100p" type="text" [(ngModel)]="ingredient.name">
                 </div>
             </div>
             <div class="w3-row">
@@ -14,7 +14,7 @@
                     Enter ingredient's strength
                 </div>
                 <div class="w3-third">
-                    <input type="number" [(ngModel)]="ingredient.strength" [max]="60" [min]="0">
+                    <input class="w-100p" type="number" [(ngModel)]="ingredient.strength" [max]="60" [min]="0">
                 </div>
             </div>
             <br/>
