--- a/Client/src/app/components/app-components/cocktails/create-cocktail-dialog/create-cocktail.dialog.html
+++ b/Client/src/app/components/app-components/cocktails/create-cocktail-dialog/create-cocktail.dialog.html
@@ -10,11 +10,18 @@
             </div>
         </div>
         <div class="w3-row">
-            <div class="w3-third w3-left">
-                Enter ingredient's strength
-            </div>
-            <div class="w3-third">
-                <!-- <input class="w-100p" type="number" [(ngModel)]="ingredient.strength" [max]="60" [min]="0"> -->
+            <div class="w3-twothird w3-left">
+                Add ingredients:
+                <div *ngIf="!!ingredients" class="w3-third">
+                    <div *ngFor="let excerpt of excerpts">
+                        <select>
+
+                        </select>
+                    </div>
+                </div>
+                <div>
+                    <button class="w-100p action-btn btn-silver"><i class="fas fa-plus"></i></button>
+                </div>
             </div>
         </div>
         <br/>
