Create-Cocktail-Dialog basic structure & functionality - WIP

--- a/Client/src/app/components/app-components/cocktails/cocktails.component.html
+++ b/Client/src/app/components/app-components/cocktails/cocktails.component.html
@@ -1,7 +1,7 @@
 <div class="w3-container">
     <div class="w3-row">
         <div class="w3-twothird">
-            <h3>List of cocktails</h3>
+            <h3 class="font-maiandra">List of cocktails</h3>
             <hr/>
 
             <div *ngFor="let cocktail of cocktails" class="entity-row">
