--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -24,7 +24,7 @@ $dialog-padding: 5px;
 
 @font-face {
     font-family: maiandra;
-    src: url(/fonts/Maiandra.ttf) format("opentype");
+    src: url(/fonts/MaiandraGDRegular.ttf) format("opentype");
 }
 
 .font-andromeda {
