--- a/Client/src/app/components/app-components/cocktails/create-cocktail-dialog/create-cocktail.dialog.html
+++ b/Client/src/app/components/app-components/cocktails/create-cocktail-dialog/create-cocktail.dialog.html
@@ -25,6 +25,7 @@
                     <div class="w3-twothird">
                         <input (change)="changeIngredientAmount(excerpt, $event)" type="range" [value]="excerpt.amount" min="1" max="10" />
                         <span class="ml-5">{{ excerpt.amount }}</span>
+                        <button (click)="removeExcerpt(excerpt)" class="ml-5 action-btn btn-silver"><i class="fas fa-dumpster"></i></button>
                     </div>
                 </div>
             </div>
@@ -33,10 +34,11 @@
             </div>
         </div>
         <br/>
-        <div class="w3-center w3-red">{{ errorMessage }}</div>
+        <div *ngFor="let errorMessage of errorMessages" class="w3-center w3-red">
+            {{ errorMessage }}
+        </div>
         <div class="w3-row">
             <div class="btn-flex">
-                <button (click)="log()" class="btn-silver">Log</button>
                 <button (click)="onConfirm()" class="btn-silver">Ok</button>
                 <button (click)="onClose()" class="btn-silver">Cancel</button>
             </div>
