test button for db seed moved to event page

--- a/Client/src/app/components/app-components/cocktails/edit-cocktail-dialog/edit-cocktail.dialog.html
+++ b/Client/src/app/components/app-components/cocktails/edit-cocktail-dialog/edit-cocktail.dialog.html
@@ -5,7 +5,7 @@
 
         <div class="w3-row w3-margin-bottom">
             <div class="w3-third w3-left">
-                Enter cocktail name
+                Edit cocktail name
             </div>
             <div class="w3-third">
                 <input class="w-100p" type="text" [(ngModel)]="cocktail.name">
