--- a/Client/src/app/shared/confirm-modal/confirm-modal.component.scss
+++ b/Client/src/app/shared/confirm-modal/confirm-modal.component.scss
@@ -1,20 +1,43 @@
 @import '../../../styles.scss';
 
 .confirm-modal {
-    top: 0;
-    left: 0;
     z-index: 1000;
-    position: absolute;
+    position: fixed;
     min-width: 100vw;
     min-height: 100vh;
+    display: flex;
     justify-content: center;
     align-items: center;
     background: #000000cc;
+    top: 0;
+    left: 0;
+
+    transform: scale(1.15);
+
+    transition:
+        transform 0.1s cubic-bezier(0.465, 0.183, 0.153, 0.946),
+        opacity 0.1s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+
+    opacity: 0;
+    pointer-events: none;
+
+    will-change: transform, opacity;
+}
+
+.confirm-modal-active {
+    opacity: 1;
+    pointer-events: auto;
+
+    transform: scale(1);
+
+    transition:
+        transform 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946),
+        opacity 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946);
 }
 
 
 .dialog-container {
-    z-index: 999;
+    z-index: 1001; 
     top: 30%;
     width: 50%;
     padding: 2rem;
