NEW: data display for editing cocktails

--- a/Client/src/app/components/app-components/cocktails/cocktails.component.html
+++ b/Client/src/app/components/app-components/cocktails/cocktails.component.html
@@ -7,7 +7,7 @@
             <div *ngFor="let cocktail of cocktails" class="entity-row">
                 <app-cocktail
                     [cocktail]="cocktail"
-                    (onEditClicked)="openEditDialog($event)"
+                    (onEditClicked)="openEditDialog(cocktail)"
                     (onRemoveClicked)="openRemoveDialog($event)">
                 </app-cocktail>
             </div>
